--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     </header>
 
     <main class="container">
+      <p>🆕 <a href="/wrap-up.html">Check out your 2020 Wrapped</a></p>
       <details class="elo-explainer">
         <summary>
           <i>How are the rankings calculated?</i>
