--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link id="favicon" rel="icon" href="/crew.png"/>
     <title>Among Us League!</title>
 
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
