--- a/public/player.html
+++ b/public/player.html
@@ -8,7 +8,7 @@
     <link id="favicon" rel="icon" href="/crew.png"/>
     <title>Among Us League!</title>
 
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="css/base.css"/>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -24,9 +24,9 @@
       src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
       defer
     ></script>
-    <script src="/stats.js" defer></script>
-    <script src="/graph.js" defer></script>
-    <script src="/player.js" defer></script>
+    <script src="/js/stats.js" defer></script>
+    <script src="/js/graph.js" defer></script>
+    <script src="/js/player.js" defer></script>
   </head>
   <body>
     <header class="container">
