--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
       defer
     ></script>
-    <script src="/stats.js" defer></script>
-    <script src="/graph.js" defer></script>
-    <script src="/home.js" defer></script>
+    <script src="/js/stats.js" defer></script>
+    <script src="/js/graph.js" defer></script>
+    <script src="/js/home.js" defer></script>
   </head>
   <body>
     <header class="container">
