Add analytics and some checks for bad data

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,13 @@
     <script src="/js/stats.js" defer></script>
     <script src="/js/graph.js" defer></script>
     <script src="/js/home.js" defer></script>
+
+    <!-- GoatCounter -->
+    <script data-goatcounter="https://among-us-friends.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+    <noscript>
+      <img src="https://among-us-friends.goatcounter.com/count?p=player"/>
+    </noscript>
   </head>
   <body>
     <header class="container">
