--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Among Us League</title>
+
+    <script>
+      window.goatcounter = {
+        no_onload: true
+      }
+    </script>
+    <script data-goatcounter="https://among-us-friends.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
