--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -32,7 +32,7 @@
       }
     </script>
     <script data-goatcounter="https://among-us-friends.goatcounter.com/count"
-        async src="//gc.zgo.at/count.js"></script>
+      src="//gc.zgo.at/count.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
